Prevent home logo column from collapsing

--- a/app/assets/stylesheets/styles/home.css.scss
+++ b/app/assets/stylesheets/styles/home.css.scss
@@ -1,6 +1,6 @@
 .intro-block {
   #logo-wrapper {
-    position: relative;
+    min-height: 20px;
   }
 
   .logo-overlay, #logo {
